cli/tests/testdata/bundle_check.ts
export const a: number = "a";
